tests/unit/compile/cases/syntax-errors/14.html-element-invalid.t
Lorem <fooBar/> ipsum
---- THROW% ----
Bad name <fooBar>, Component name must start with uppercase letter and HTML element name must be lowercase near `fooBar/> ipsum`
